--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -16,7 +16,7 @@
               </div>
               <div class="d-flex justify-content-between" *ngIf="score">
                 <div class="d-flex" style="gap: 1vw">
-                  <h6>Score</h6>
+                  <h6>Score:</h6>
                 </div>
                 <span>
                   <h6>{{ score }}</h6>
@@ -24,7 +24,7 @@
               </div>
               <div class="d-flex justify-content-between" *ngIf="userStat">
                 <div class="d-flex" style="gap:1vw;">
-                  <h6>Victories</h6>
+                  <h6>Victories:</h6>
                 </div>
                 <span>
                   <h6>{{ userStat.victories }}</h6>
