--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid inside-frame" style="overflow: scroll;">
+<div class="container-fluid inside-frame" style="overflow-y: scroll;">
   <div class="card d-flex flex-column ">
     <div class="card-body text">
       <img src="../../../assets/img/pokeDuelLogoTitle.png" style="width: 100%;" />
