pokemons position fix (bug 8)

--- a/src/_game-battle.scss
+++ b/src/_game-battle.scss
@@ -5,7 +5,7 @@
 
 
 .mat-grid-list {
-    height: 360px;
+    height: 80%;
 }
 
 .mat-progress-bar {
@@ -37,7 +37,7 @@
 
 .card-img-right {
     width: 100px;
-    max-height: 125px;
+    max-height: 80%;
 }
 
 .mat-button-base {
