--- a/src/app/components/continue-game/continue-game.component.html
+++ b/src/app/components/continue-game/continue-game.component.html
@@ -15,7 +15,7 @@
           <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
           <img :src="{{ pokemonRight.imgFront }}" class="card-img-right" alt="pokemon-right">
         </div>
-        <div class="user-actions" *ngIf="pokemonLeft.life > 0">
+        <div class="user-actions" *ngIf="pokemonLeft.life > 0" (click)="isDisabled = !isDisabled">
 
           <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0"
             >
