--- a/src/app/components/how-to-play/how-to-play.component.scss
+++ b/src/app/components/how-to-play/how-to-play.component.scss
@@ -6,7 +6,8 @@
 
   background: transparent;
   width: 100%;
-  height: 88%;
+  height: 80%;
+  top: 5vh;
   margin: 0;
   padding: 0;
   display: grid;
@@ -51,6 +52,7 @@
 
 @media (min-width: 800px) {
   .inside-frame {
+    
     .card {
       .card-body {
         p:hover {
