--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -15,7 +15,7 @@
         llevará más de 30 segundos!
       </p>
 
-      <h2>ESCOGE A TU EQUIPO (SI NO, CON QUÉ VAS A JUGAR)</h2>
+      <h2>EQUIPO POKÉMON (SI NO, CON QUÉ VAS A JUGAR)</h2>
 
       <p>
         Una vez que te hayas identificado, necesitarás a tu equipo <em>pokémon</em> para poder combatir (o jugar, que
@@ -26,7 +26,6 @@
 
       <h2>TABLA DE TIPOS (PARA DUMMIES)</h2>
       <p>
-
         En esta aplicación, solo tenemos pokémon de 3 tipos: <em>agua, fuego y planta</em>. Cada tipo es fuerte y débil
         a la
         vez dependiendo de a quién nos enfrentemos. La tabla a tener en cuenta, pues, es la siguiente:<br>
@@ -50,12 +49,13 @@
 
       <h2>JUEGO (A ESTO HEMOS VENIDO)</h2>
       <p>
-        Durante el juego tienes dos posibilidades con las que deberás trabajar: <em>defender y atacar</em>. Atacar quita
+        Durante el juego tienes dos posibilidades con las que deberás trabajar: <em>defender y atacar</em>. Estas acciones se llevan a cabo en 
+        la pantalla del juego (los botones <em>B y A</em> no desempeñan función alguna)Atacar quita
         un
         tanto por ciento de salud; a la par, defender reduce el porcentaje de daño causado por el ataque.
 
-        En el caso de ventaja de tipos, se quitará un 20% adicional; puede ocurrir, también que un pokémon,
-        independientemente del tipo, propicie un golpe crítico. En este caso, se quitará un 20% adicional.
+        En el caso de ventaja de tipos, se quitará un % adicional; puede ocurrir, también que un pokémon,
+        independientemente del tipo, propicie un golpe crítico. En este caso, se quitará un % adicional.
 
         La ronda se gana si has vencido a tu oponente (pasas de ronda), y se genera uno nuevo con el que tendrás que
         combatir si quieres seguir avanzando de ronda.
@@ -65,8 +65,8 @@
       <h2>GUARDAR O CARGAR PARTIDA (SI NO PA' QUÉ JUEGAS)</h2>
       <p>
 
-        Durante el transcurso del juego se podrá <em>guardar o cargar partida</em>. La primera opción actualiza tus
-        estadísticas (guarda tus progresos), y la segunda te permite cargar la última partida almacenada (guardada).
+        Durante el transcurso del juego se podrá <em>guardar o continuar</em>. La primera opción actualiza tus
+        estadísticas (guarda tus progresos) yendo al botón de <em>menú</em> a pie de de la pantalla de tu móvil; y la segunda te permite cargar la última partida almacenada (guardada).
       </p>
 
       <h2>CERRAR SESIÓN (ADÉU)</h2>
