--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -37,6 +37,7 @@ input .mat-input-element {
     background: transparent;
     border:none;
     color: red;
+    margin-top: 3vh;
 }
 
 .register-container{
