--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
 
                         <div class="d-flex justify-content-between">
                             <input type="button" class="btn btn-secondary" value="Back" style="max-height: 38px;" routerLink=""/>
-                            <input type="submit" class="btn btn-primary" value="Sign up" (click)="logIn(logInForm.value)" [style.display]="spinner ? 'none' : 'block'"/>
+                            <input type="submit" class="btn btn-primary" value="Log in" (click)="logIn(logInForm.value)" [style.display]="spinner ? 'none' : 'block'"/>
                             <spinner [style.display]="spinner ? 'block' : 'none'"></spinner>
                         </div>
                     </form>
