typography and fix file

--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -4,7 +4,10 @@
 
 .mat-stepper-vertical {
     background-color: transparent !important;
-    // background: $white;
+}
+
+.material-icons {
+    font-family: 'Material Icons' !important;
 }
 
 .card{
