--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="form-group">
                             <input type="file" (change)="uploadFile($event)" name="avatar" class="form-control"
-                                placeholder="Avatar" required autofocus (click)="hideError = false"/>
+                                placeholder="Avatar" required autofocus/>
                         </div>
                         <div class="d-flex justify-content-between">
                             <input type="button" class="btn btn-secondary" value="Back" style="max-height: 38px;" routerLink=""/>
