--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap%27');
+
+* {
+  font-family: 'Rajdhani', sans-serif;
+}
 // ------------- VARIABLES GLOBAL
 // ------------------------------------
 
@@ -50,3 +55,4 @@ $grad-grey-4: #62636c;
 
 //TYPOGRAPHY
 $typo-pokemon: 'Pokemon Solid', sans-serif;
+$typo-body: 'Rajdhani', sans-serif;
