--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -15,18 +15,12 @@
             <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
             <img :src="{{ pokemonRight.imgFront }}" class="card-img-right" alt="pokemon-right">
           </div>
-          <div class="user-actions" *ngIf="pokemonLeft.life > 0" (click)="disable()">
-            <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
-              <img src="../../../assets/img/espada.png">
-              <button mat-button [disabled]="isDisabled" (click)="attack()">Attack</button>
-            </div>
-            <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
-              <img src="../../../assets/img/escudo.png">
-              <button mat-button [disabled]="isDisabled" (click)="defense()">Defense</button>
-            </div>
-          </div>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
     <spinner [style.display]="!pokemonLeft.imgBack && !pokemonRight.imgFront ? 'block' : 'none'"></spinner>
+      <div class="a-b">
+        <div class="b">B</div>
+        <div class="a">A</div>
+      </div>
   </div>
