--- a/src/app/components/continue-game/continue-game.component.html
+++ b/src/app/components/continue-game/continue-game.component.html
@@ -1,32 +1,32 @@
 <div class="container-fluid inside-frame background-battle">
-  <mat-grid-list cols="2" *ngIf="pokemonLeft.imgBack && pokemonRight.imgFront">
-    <mat-grid-tile style="display: flex; height: 100%;">
-      <div *ngIf="pokemonLeft.life > 0" class="pokemon-left animate__bounceIn" id="pokemonLeft">
-        <p class="pokemon-name-left">{{ pokemonLeft.name }} <span style="font-size: 8px">{{ pokemonLeft.life }}/100</span></p>
-        <mat-progress-bar mode="determinate" :value="{{ pokemonLeft.life }}"></mat-progress-bar>
-        <img :src="{{ pokemonLeft.imgBack }}" class="card-img-left" alt="pokemon-left">
-      </div>
-    </mat-grid-tile>
-    <mat-grid-tile style="height: 100%;">
-      <div *ngIf="pokemonRight.life > 0" class="pokemon-right">
-        <div class="d-flex flex-column justify-content-center animate__bounceIn"
-          style="align-items: flex-end; height: 100%;" id="pokemonRight">
-          <p class="pokemon-name-right">{{ pokemonRight.name }} <span style="font-size: 8px">{{ pokemonRight.life }}/100</span></p>
-          <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
-          <img :src="{{ pokemonRight.imgFront }}" class="card-img-right" alt="pokemon-right">
+  <spinner [style.display]="!pokemonLeft.imgBack || !pokemonRight.imgFront ? 'block' : 'none'" style="position: absolute;"></spinner>
+    <mat-grid-list cols="2" *ngIf="pokemonLeft.imgBack || pokemonRight.imgFront">
+      <mat-grid-tile style="display: flex; height: 100%;">
+        <div *ngIf="pokemonLeft.life > 0" class="pokemon-left animate__bounceIn" id="pokemonLeft">
+          <p class="pokemon-name-left">{{ pokemonLeft.name }} <span style="font-size: 8px">{{ pokemonLeft.life }}/100</span></p>
+          <mat-progress-bar mode="determinate" :value="{{ pokemonLeft.life }}"></mat-progress-bar>
+          <img :src="{{ pokemonLeft.imgBack }}" class="card-img-left" alt="pokemon-left">
         </div>
-        <div class="user-actions" *ngIf="pokemonLeft.life > 0" (click)="disable()">
-          <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
-            <img src="../../../assets/img/espada.png">
-            <button mat-button (click)="attack()">Attack</button>
+      </mat-grid-tile>
+      <mat-grid-tile style="height: 100%;">
+        <div *ngIf="pokemonRight.life > 0" class="pokemon-right">
+          <div class="d-flex flex-column justify-content-center animate__bounceIn"
+            style="align-items: flex-end; height: 100%;" id="pokemonRight">
+            <p class="pokemon-name-right">{{ pokemonRight.name }} <span style="font-size: 8px">{{ pokemonRight.life }}/100</span></p>
+            <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
+            <img :src="{{ pokemonRight.imgFront }}" class="card-img-right" alt="pokemon-right">
           </div>
-          <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
-            <img src="../../../assets/img/escudo.png">
-            <button mat-button (click)="defense()">Defense</button>
+          <div class="user-actions" *ngIf="pokemonLeft.life > 0" (click)="disable()">
+            <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
+              <img src="../../../assets/img/espada.png">
+              <button mat-button (click)="attack()">Attack</button>
+            </div>
+            <div class="attack-buttons pokeR-height" *ngIf="pokemonLeft.life !== 0 || pokemonRight.life !== 0">
+              <img src="../../../assets/img/escudo.png">
+              <button mat-button (click)="defense()">Defense</button>
+            </div>
           </div>
         </div>
-      </div>
-    </mat-grid-tile>
-  </mat-grid-list>
-  <spinner [style.display]="!pokemonLeft.imgBack && !pokemonRight.imgFront ? 'block' : 'none'"></spinner>
-</div>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
