--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,11 +7,11 @@
                     <form [formGroup]="logInForm">
                         <div class="form-group">
                             <input type="text" formControlName="username" name="username" class="form-control"
-                                placeholder="Username" required autofocus (click)="hideError = false"/>
+                                placeholder="Username*" required autofocus (click)="hideError = false"/>
                         </div>
                         <div class="form-group d-flex">
                                 <input [type]="hide ? 'password' : 'text'" formControlName="password" name="password" class="form-control"
-                                placeholder="Password" required (click)="hideError = false"/>
+                                placeholder="Password*" required (click)="hideError = false"/>
                                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </button>
