--- a/src/_game-battle.scss
+++ b/src/_game-battle.scss
@@ -12,17 +12,17 @@
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
-    background-color: green !important;
+    background-color: $green !important;
     border: 1px solid $black;
 }
 
 ::ng-deep .mat-progress-bar-buffer {
-    background-color: green !important;
+    background-color: $white !important;
     border: 1px solid $black;
 }
 
 mat-progress-bar.progressBar .mat-progress-bar-fill::after {
-    background-color: green !important;
+    background-color: $green !important;
     border: 1px solid $black;
 }
 
