--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,6 +14,7 @@ $dark-garnet: #751650 !default;
 $dark-purple: #665f9e;
 $black: #000000;
 $white: #ffffff;
+$green: rgb(39, 177, 39);
 
 //override-colors
 $primary: #751650;
