--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -31,7 +31,9 @@ $body-bg-md-up: #665f9e;
 $screen-gameboy-bg: #bebfc4;
 
 // -- Typography
-
+$gold: #ffd700;
+$silver: #c0c0c0;
+$bronze: #cd7f32;
 
 // -- Pad-buttons
 $bg-but-pad: #565e6a;
