--- a/src/app/components/leaderboard/leaderboard.component.scss
+++ b/src/app/components/leaderboard/leaderboard.component.scss
@@ -21,7 +21,6 @@
         font-size: 2ch;
         border-spacing: 10px;
 
-
         td,
         th {
           text-align: center;
@@ -50,7 +49,7 @@
           position: sticky;
           z-index: 3;
           top: 0;
-          &:hover{
+          &:hover {
             transform: none;
           }
         }
@@ -92,8 +91,13 @@
   .inside-frame {
     .card {
       .card-body {
-        table{
+        table {
           font-size: 3.8ch;
+          tr:first-child {
+            th {
+              background-color: $body-bg-md-up;
+            }
+          }
         }
       }
     }
