--- a/src/app/components/continue-game/continue-game.component.html
+++ b/src/app/components/continue-game/continue-game.component.html
@@ -3,7 +3,11 @@
     <mat-grid-list cols="2" *ngIf="pokemonLeft.imgBack || pokemonRight.imgFront">
       <mat-grid-tile style="display: flex; height: 100%;">
         <div *ngIf="pokemonLeft.life > 0" class="pokemon-left animate__bounceIn" id="pokemonLeft">
-          <p class="pokemon-name-left">{{ pokemonLeft.name }} <span style="font-size: 8px">{{ pokemonLeft.life }}/100</span></p>
+          <p class="pokemon-name-left">{{ pokemonLeft.name }} 
+            <span style="font-size: 8px">{{ pokemonLeft.life }}/100</span>
+            <span style="font-size: 8px" *ngIf="typoLeft"> {{ typoLeft }}</span>
+          </p>
+
           <mat-progress-bar mode="determinate" :value="{{ pokemonLeft.life }}"></mat-progress-bar>
           <img :src="{{ pokemonLeft.imgBack }}" class="card-img-left" alt="pokemon-left">
         </div>
@@ -12,7 +16,10 @@
         <div *ngIf="pokemonRight.life > 0" class="pokemon-right">
           <div class="d-flex flex-column justify-content-center animate__bounceIn"
             style="align-items: flex-end; height: 100%;" id="pokemonRight">
-            <p class="pokemon-name-right">{{ pokemonRight.name }} <span style="font-size: 8px">{{ pokemonRight.life }}/100</span></p>
+            <p class="pokemon-name-right">{{ pokemonRight.name }} 
+              <span style="font-size: 8px">{{ pokemonRight.life }}/100 </span>
+              <span style="font-size: 8px" *ngIf="typoRight">{{ typoRight }} </span>
+            </p>
             <mat-progress-bar mode="determinate" :value="{{ pokemonRight.life }}"></mat-progress-bar>
             <img :src="{{ pokemonRight.imgFront }}" class="card-img-right" alt="pokemon-right">
           </div>
