--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -21,8 +21,9 @@
                                 placeholder="Avatar" required autofocus />
                         </div>
                         <div class="d-flex justify-content-between">
-                        <input type="button" class="btn btn-secondary" value="Back" [routerLink]="['/my-account',user._id]"/>
-                        <input type="submit" class="btn btn-primary" value="Update profile"/>
+                        <input type="button" class="btn btn-secondary" value="Back" [routerLink]="['/my-account',user._id]" style="max-height: 38px;"/>
+                        <input type="submit" class="btn btn-primary" value="Update profile" (click)="spinner = !spinner " [style.display]="spinner ? 'none' : 'block'"/>
+                        <spinner [style.display]="spinner ? 'block' : 'none'"></spinner>
                     </div>
                 </form>
                 <input [(ngModel)]="error" class="error-input" readonly disabled="true"/>
