changes bugs in remote

--- a/src/app/components/menu-game/menu-game.component.html
+++ b/src/app/components/menu-game/menu-game.component.html
@@ -1,4 +1,4 @@
-<div class="container inside-frame">
+<div class="container inside-frame" style="max-width: 100%;">
     <section class="section-menu">
         <div class="img-card">
             <img mat-card-image src="../assets/img/pokeDuelOnlyLogo.png">
