--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -1,4 +1,4 @@
-<div class="container inside-frame">
+<div class="container inside-frame" style="width: 100%;">
   <div class="d-flex justify-content-center align-self-center" style="height: 100%;">
     <div class="card">
       <div class="card-body">
